<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp">


    <ImageView

        android:id="@+id/imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bacterio"
        >


    </ImageView>


    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/bacterio_Text"
        app:layout_constraintTop_toTopOf="@id/imagen"
        style="@style/text_name" />
    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_bacterio"
        style="@style/text_style"
        android:layout_marginTop="8sp"/>
    <TextView
        android:id="@+id/habilidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habilidades_bacterio"
        style="@style/text_style"
        android:layout_marginTop="15sp"/>
</LinearLayout>